# MD1-solana

./: .env.example  .gitignore  Anchor.toml  LICENSE  MAINNET.md  README.md  SECURITY.md  SOLSCAN_VERIFICATION.md  VERIFICATION.md  program_id.txt
.github/workflows/: solscan_build.yml
programs/md1usd_solana/: Cargo.toml
programs/md1usd_solana/src/: lib.rs
programs/md1usd_solana/tests/: test_initialize.rs
scripts/: verify_solscan.sh
